[gd_scene load_steps=6 format=3 uid="uid://dbiierjhl0e8h"]

[ext_resource type="Script" path="res://Main.gd" id="1_cncgi"]
[ext_resource type="PackedScene" uid="uid://cqs7s3wmfdsd5" path="res://Player.tscn" id="1_ni304"]
[ext_resource type="PackedScene" uid="uid://qabv7j2sppyi" path="res://enemy.tscn" id="2_fn7l5"]
[ext_resource type="Script" path="res://Player.gd" id="2_ihtj5"]
[ext_resource type="Script" path="res://HUD.gd" id="3_i114q"]

[node name="Main" type="Node"]
script = ExtResource("1_cncgi")
Mob_scene = ExtResource("2_fn7l5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0784314, 0.113725, 1)

[node name="Player" parent="." instance=ExtResource("1_ni304")]
script = ExtResource("2_ihtj5")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_i114q")

[node name="Button" type="Button" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -248.0
offset_right = 100.0
offset_bottom = -148.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 55
text = "START!"

[node name="Label" type="Label" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="HUD"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Alien Invasion!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(576, 400)

[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/Button" to="HUD" method="_on_button_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
